feat(contexts): link looks to contexts
